Revision history for {{$dist->name}}

{{$NEXT}}

0.005     2010-11-08 23:30:37 Europe/Berlin
	- Fixed tests (BinGOs++, kentnl++)

0.004     2010-11-06 20:50:54 Europe/Berlin

0.003     2010-11-06 19:42:15 Europe/Berlin

0.002     2010-11-06 18:56:13 Europe/Berlin

0.001     2010-11-06 06:49:49 Europe/Berlin
	- First trail release.. functionality missing