@@ -7,9 +7,7 @@ copyright_year   = 2010
 [@GETTY]
 
 [Prereqs]
-MooseX::POE = 0.208
-POE::Component::Client::Feed = 0.003
-IO::All = 0
+POE = 0.38
 
 [Prereqs / TestRequires]
 Test::More = 0.90
