@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	- Added automatic generation of name out of url (1:1 translation into a filename-friendly string)
+	- Added the ignore_first feature for feeds that are not cached so far
 
 0.005     2010-11-08 23:30:37 Europe/Berlin
 	- Fixed tests (BinGOs++, kentnl++)
